--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "parcel-project-template",
+  "name": "goit-js-hw-09",
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://chetkiy777.github.io/goit-js-hw-08",
+  "homepage": "https://chetkiy777.github.io/goit-js-hw-09",
   "scripts": {
     "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /goit-js-hw-08/"
+    "build": "parcel build src/*.html --public-url /goit-js-hw-09/"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/chetkiy777/goit-js-hw-08.git"
+    "url": "git+https://github.com/chetkiy777/goit-js-hw-09.git"
   },
   "keywords": [],
   "author": "Alexander Repeta <alexander.repeta@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/goitacademy/parcel-project-template/issues"
+    "url": "https://github.com/chetkiy777/goit-js-hw-09/issues"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.5",
